k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rose-web-service
spec:
  type: NodePort
  selector:
    app: rose-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
